k8s/namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name:  pfe
  labels:
    env: dev
    app: pfe-demo
