k8s/frontend-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  namespace: pfe
spec:
  selector:
    matchLabels:
      app: front-app
      tier: frontend
      track: stable
  replicas: 1
  template:
    metadata:
      labels:
        app: front-app
        tier: frontend
        track: stable
    spec:
      containers:
      - name: front-covibed
        image: "683929775058.dkr.ecr.eu-west-3.amazonaws.com/front-repo:v1.0.61"
        ports:
        - containerPort: 90
          protocol: TCP
        volumeMounts:
        - name: nginx-conf
          mountPath: "/etc/nginx/conf.d/default.conf"
          subPath: "default.conf"
        command: ["nginx"]
        args: ["-g" , "daemon off;"]
      restartPolicy: Always
      volumes:
      - name: nginx-conf
        configMap:
          name: nginx-conf
          items:
          - key: "default.conf"
            path: "default.conf"
...
