k8s/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-service
  namespace: pfe
spec:
  selector:
    app: springboot-k8s-backend
    #tier: backend
  ports:
    - protocol: TCP
      port: 8891
      targetPort: 8891
  type: ClusterIP
