k8s/frontend-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: frontend
  namespace: pfe
spec:
  selector:
    app: front-app
    tier: frontend
  ports:
  - protocol: "TCP"
    port: 90
    targetPort: 90
  type: ClusterIP
  #type: LoadBalancer
...
