k8s/mysql-service.yaml
# Define a 'Service' To Expose mysql to Other Services
apiVersion: v1
kind: Service
metadata:
  name: mysql-svc # DNS name
  namespace: pfe
  labels:
    app: mysqldb
    tier: database
spec:
  ports:
    - port: 3306
      targetPort: 3306
      protocol: TCP
  selector:       # mysql Pod Should contain same labels
    app: mysqldb
    tier: database
  clusterIP: None  # We Use DNS, Thus ClusterIP is not relevant
