k8s/alert-manager-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-alert-manager
  namespace: monitoring
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
    nginx.ingress.kubernetes.io/rewrite-target: /$2

spec:
  ingressClassName: nginx
  rules:
  - host: kabil-aws-pfe.com
    http:
      paths:
        - pathType: Prefix
          backend:
            service:
              name: prometheus-stack-kube-prom-alertmanager
              port:
                name: http-web
          path: '/alertmanager(/|$)(.*)'
  tls:
  - hosts:
    - kabil-aws-pfe.com
    secretName: laugh-tale-secret-one-piece
