k8s/grafana-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-grafana
  namespace: monitoring
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
    kubernetes.io/tls-acme: "true"
    nginx.ingress.kubernetes.io/ssl-passthrough: "true"

spec:
  ingressClassName: nginx
  rules:
  - host: grafana.kabil-aws-pfe.com
    http:
      paths:
        - pathType: Prefix
          backend:
            service:
              name: prometheus-stack-grafana
              port:
                name: http-web
          path: /
  tls:
  - hosts:
    - grafana.kabil-aws-pfe.com
    secretName: laugh-tale-secret-one-piece
